<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--    title text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/upcoming_consult"
                android:textColor="#585F65"
                android:textSize="14dp"></TextView>

            <!--    consultation details card-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="14dp"
                android:alpha="0.86"
                android:background="@drawable/upcoming_appointment_box_gradient_background"
                android:orientation="horizontal">
                <!--        date-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/consultation_date"
                    android:fontFamily="@font/roboto_regular"
                    android:text=""
                    android:textColor="#FDFDFF"
                    android:textSize="25dp">

                </TextView>
                <!--        time-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="51"

                    android:gravity="right"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginRight="3dp"
                            android:fontFamily="@font/roboto_bold"
                            android:gravity="right"
                            android:id="@+id/consultation_time"
                            android:text=""
                            android:textColor="#FAFAFA"
                            android:textSize="25dp"></TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:id="@+id/am"
                            android:layout_marginRight="21dp"
                            android:fontFamily="@font/roboto_bold"
                            android:gravity="right"
                            android:text=""
                            android:textColor="#FAFAFA"
                            android:textSize="18dp">

                        </TextView>
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>


            <!--    past consultations-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/doctors_consulted"
                android:textColor="#585F65"
                android:textSize="14dp"></TextView>

            <!--    consultations card-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="horizontal">

                <!--    categories-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/consultations_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="10dp"></androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="13dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="3dp"
                android:text="@string/consult_specialist"
                android:textColor="#585F65"

                android:textSize="14dp"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"></androidx.recyclerview.widget.RecyclerView>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>